--- a/WebContent/assets/css/loading.css
+++ b/WebContent/assets/css/loading.css
@@ -38,8 +38,8 @@
 	position: fixed;
 	width: 100%;
 	height: 100%;
-	top: 0;
-	left: 0;
+	top: 0 !important;
+	left: 0 !important;
 	background: none repeat scroll 0% 0% #E0E1E3;
 	opacity: 0.6;
 }
